Fixed JWT authentication and completed admin customer and mechanic management